--- a/SpaceXMission/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/SpaceXMission/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,11 +13,37 @@
             <objects>
                 <viewController storyboardIdentifier="MissionListViewController" id="BYZ-38-t0r" customClass="MissionListViewController" customModule="SpaceXMission" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C3h-rT-BWN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="tgx-d6-MCB"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wGg-jj-bAz">
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="wGg-jj-bAz" secondAttribute="bottom" id="L3e-TA-vSF"/>
+                            <constraint firstItem="C3h-rT-BWN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ni1-9x-4ar"/>
+                            <constraint firstItem="wGg-jj-bAz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="meH-Jb-Y3W"/>
+                            <constraint firstItem="C3h-rT-BWN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tBk-cg-eMn"/>
+                            <constraint firstItem="wGg-jj-bAz" firstAttribute="top" secondItem="C3h-rT-BWN" secondAttribute="bottom" id="tJa-vF-Lu2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="C3h-rT-BWN" secondAttribute="trailing" id="wMG-Nw-Pwv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wGg-jj-bAz" secondAttribute="trailing" id="zr1-aS-Ecr"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerView" destination="C3h-rT-BWN" id="gGg-9y-YAz"/>
+                        <outlet property="missionListTableView" destination="wGg-jj-bAz" id="rwT-kn-FYs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
