Feature - Implemented the foundation of MissionDetailMissionDetailViewController and its related ViewModel and MissionDetailViewController. Refactor - Small code clean up in WebImageView and some other files.

--- a/SpaceXMission/Views/CustomCells/MissionTableViewCell/MissionTableViewCell.xib
+++ b/SpaceXMission/Views/CustomCells/MissionTableViewCell/MissionTableViewCell.xib
@@ -32,7 +32,7 @@
                             <constraint firstAttribute="width" constant="35" id="iAx-lc-7Jx"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mT1-fJ-Xvx" userLabel="Description">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mT1-fJ-Xvx" userLabel="Description">
                         <rect key="frame" x="16" y="52" width="288" height="105"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
