--- a/SpaceXMission/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/SpaceXMission/Views/Storyboards/Base.lproj/Main.storyboard
@@ -49,75 +49,59 @@
             </objects>
             <point key="canvasLocation" x="91" y="4"/>
         </scene>
-        <!--Mission Detail View Controller-->
-        <scene sceneID="KTl-mi-qGH">
+        <!--Mission Details View Controller-->
+        <scene sceneID="ITh-9H-SGb">
             <objects>
-                <viewController storyboardIdentifier="MissionDetailViewController" id="kUP-dW-Sa3" customClass="MissionDetailViewController" customModule="SpaceXMission" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="2BL-Ts-fBx">
+                <viewController storyboardIdentifier="MissionDetailsViewController" id="Uwq-M2-BcZ" customClass="MissionDetailsViewController" customModule="SpaceXMission" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vky-rI-JB7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="587-kK-Spz">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lu4-E9-vIh">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="S6r-Kx-5Ce"/>
+                                    <constraint firstAttribute="height" constant="50" id="rlN-BY-DPg"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c9r-3T-ed1" customClass="WebImageView" customModule="SpaceXMission" customModuleProvider="target">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zd7-f0-AcP" customClass="WebImageView" customModule="SpaceXMission" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="375" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="NKU-7R-gVb"/>
+                                    <constraint firstAttribute="height" constant="150" id="5OU-ua-Zs0"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wv-rI-4lH">
-                                <rect key="frame" x="16" y="175" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="7wv-rI-4lH" secondAttribute="height" id="WcK-Rl-HAl"/>
-                                    <constraint firstAttribute="width" constant="50" id="g4L-92-piH"/>
-                                </constraints>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="bookmark" catalog="system"/>
-                                <connections>
-                                    <action selector="bookMarkActionButton:" destination="kUP-dW-Sa3" eventType="touchUpInside" id="l1T-9V-Fep"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dCc-EM-eyE">
-                                <rect key="frame" x="0.0" y="215" width="375" height="452"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="muA-Jn-kzo">
+                                <rect key="frame" x="0.0" y="200" width="375" height="467"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="Hnf-lk-KMG"/>
+                        <viewLayoutGuide key="safeArea" id="IFx-j1-Rfi"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dCc-EM-eyE" firstAttribute="top" secondItem="c9r-3T-ed1" secondAttribute="bottom" constant="15" id="8FK-GS-540"/>
-                            <constraint firstItem="Hnf-lk-KMG" firstAttribute="trailing" secondItem="587-kK-Spz" secondAttribute="trailing" id="AGD-lz-ooO"/>
-                            <constraint firstItem="Hnf-lk-KMG" firstAttribute="trailing" secondItem="c9r-3T-ed1" secondAttribute="trailing" id="DYG-KO-Sp9"/>
-                            <constraint firstItem="c9r-3T-ed1" firstAttribute="top" secondItem="587-kK-Spz" secondAttribute="bottom" id="Hb5-dm-kTK"/>
-                            <constraint firstItem="587-kK-Spz" firstAttribute="top" secondItem="2BL-Ts-fBx" secondAttribute="top" id="gPv-cL-kqM"/>
-                            <constraint firstItem="Hnf-lk-KMG" firstAttribute="bottom" secondItem="dCc-EM-eyE" secondAttribute="bottom" id="qUQ-5S-yY2"/>
-                            <constraint firstItem="7wv-rI-4lH" firstAttribute="leading" secondItem="Hnf-lk-KMG" secondAttribute="leading" constant="16" id="tRL-oe-NEY"/>
-                            <constraint firstItem="c9r-3T-ed1" firstAttribute="leading" secondItem="Hnf-lk-KMG" secondAttribute="leading" id="vgY-IK-Xr6"/>
-                            <constraint firstItem="7wv-rI-4lH" firstAttribute="top" secondItem="c9r-3T-ed1" secondAttribute="bottom" constant="-25" id="vxB-ba-hD2"/>
-                            <constraint firstItem="587-kK-Spz" firstAttribute="leading" secondItem="Hnf-lk-KMG" secondAttribute="leading" id="wfc-p9-Rqs"/>
-                            <constraint firstItem="Hnf-lk-KMG" firstAttribute="trailing" secondItem="dCc-EM-eyE" secondAttribute="trailing" id="ybA-aX-Nv9"/>
-                            <constraint firstItem="dCc-EM-eyE" firstAttribute="leading" secondItem="Hnf-lk-KMG" secondAttribute="leading" id="ykm-9q-jHJ"/>
+                            <constraint firstItem="IFx-j1-Rfi" firstAttribute="bottom" secondItem="muA-Jn-kzo" secondAttribute="bottom" id="Bbr-f7-1z5"/>
+                            <constraint firstItem="IFx-j1-Rfi" firstAttribute="trailing" secondItem="lu4-E9-vIh" secondAttribute="trailing" id="DMu-U7-GkM"/>
+                            <constraint firstItem="zd7-f0-AcP" firstAttribute="top" secondItem="lu4-E9-vIh" secondAttribute="bottom" id="J6n-0z-oMq"/>
+                            <constraint firstItem="IFx-j1-Rfi" firstAttribute="trailing" secondItem="zd7-f0-AcP" secondAttribute="trailing" id="LFC-rI-JsJ"/>
+                            <constraint firstItem="lu4-E9-vIh" firstAttribute="leading" secondItem="IFx-j1-Rfi" secondAttribute="leading" id="NlW-ob-YF1"/>
+                            <constraint firstItem="zd7-f0-AcP" firstAttribute="leading" secondItem="IFx-j1-Rfi" secondAttribute="leading" id="UK7-yw-h6J"/>
+                            <constraint firstItem="muA-Jn-kzo" firstAttribute="top" secondItem="zd7-f0-AcP" secondAttribute="bottom" id="ZW1-RS-HtY"/>
+                            <constraint firstItem="IFx-j1-Rfi" firstAttribute="trailing" secondItem="muA-Jn-kzo" secondAttribute="trailing" id="vSm-K2-iCh"/>
+                            <constraint firstItem="muA-Jn-kzo" firstAttribute="leading" secondItem="IFx-j1-Rfi" secondAttribute="leading" id="w2e-i9-QW5"/>
+                            <constraint firstItem="lu4-E9-vIh" firstAttribute="top" secondItem="vky-rI-JB7" secondAttribute="top" id="y2P-LQ-gSo"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bookmarkButton" destination="7wv-rI-4lH" id="lCN-0x-ZTX"/>
-                        <outlet property="detailsTableView" destination="dCc-EM-eyE" id="XoB-0y-8DD"/>
-                        <outlet property="headerView" destination="587-kK-Spz" id="YUW-1p-2PT"/>
-                        <outlet property="missionImageView" destination="c9r-3T-ed1" id="HDc-5w-L2p"/>
+                        <outlet property="headerView" destination="lu4-E9-vIh" id="ela-yM-jYl"/>
+                        <outlet property="missionDetailsTableView" destination="muA-Jn-kzo" id="IZ4-gx-2pZ"/>
+                        <outlet property="missionImageView" destination="zd7-f0-AcP" id="6ui-4n-VpY"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VGZ-A0-d2x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bcv-MY-KkY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="758" y="3"/>
+            <point key="canvasLocation" x="775" y="16"/>
         </scene>
     </scenes>
     <resources>
-        <image name="bookmark" catalog="system" width="110" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
